--- a/.gocd.yaml
+++ b/.gocd.yaml
@@ -1,10 +1,10 @@
 environments:
-  development:
+  chef:
     pipelines:
       - chef-awscli
 pipelines:
   chef-awscli:
-    group: development
+    group: chef
     materials:
       gitMaterial1:
         git: git@github.com:kinesisptyltd/chef-awscli.git
